﻿Revision history for Dist-Zilla-PluginBundle-Author-KENTNL

2.020002 2014-09-06T07:27:26Z

2.020001 2014-09-06T03:22:12Z
 [Bugfix]
 - dont set git_versions in new dists.
 - add dump_config to MinimumPerl

 [Dependencies::Stats]
 - Dependencies changed since 2.020000, see misc/*.deps* for details
 - develop: ↑7
 - runtime: +1 ↑10
 - test: ↑1 (recommends: ↑1)

 [Metadata]
 - Specifiy an email address for copyright holder.

2.020000 2014-08-20T15:50:05Z
 [00 Major]
 - 'git_versions' is now both optional, and an ignored parameter.
 - 'normal_form' is now optional, and defaults to 'numify'
 - 'mantissa' is now optional, and defautls to 6.
 - Discrepancies with any of the above will be offloaded into the RecommendChanges plugin.

 [Dependencies::Stats]
 - Dependencies changed since 2.019000, see misc/*.deps* for details
 - develop: ↑1
 - runtime: ↑1

2.019000 2014-08-18T03:48:49Z
 [00 Minor]
 - Test and dependency recommendation adjustments.
 - no code changes.

 [Dependencies::Noteworthy]
 - Cpanel::JSON::XS and JSON::MaybeXS now in runtime.recommends instead of JSON{,::XS}

 [Dependencies::Stats]
 - Dependencies changed since 2.018000, see misc/*.deps* for details
 - develop: ↑2
 - runtime: ↑2 (recommends: +2 -2)
 - test: -1

 [Tests]
 - Tests no longer require parsing JSON manually to validate themselves and instead just read distmeta.

2.018000 2014-08-16T21:56:32Z
 [00 Minor]
 - CPANDAY!
 - Add new KENTNL::RecommendFixes trick.

 [Dependencies::Stats]
 - Dependencies changed since 2.017002, see misc/*.deps* for details
 - develop: +1 ↑11 (suggests: ↑1)
 - runtime: +1 ↑15
 - test: ↑2

2.017002 2014-08-15T20:54:32Z
 [00 Trivial]
 - util updates.
 - whitespace adjustment

 [Misc]
 - Improve source side POD to reduce build side whitespace.

 [Utils]
 - dep_changes: Greatly increase the cache timing to 5h instead of 30m now it proves to be more stable.

2.017001 2014-08-15T01:59:33Z
 [00 Bugfix]