@@ -61,7 +61,7 @@
             "Dist::Zilla::Plugin::Prereqs" : "5.020",
             "Dist::Zilla::Plugin::Prereqs::AuthorDeps" : "0.003",
             "Dist::Zilla::Plugin::Prereqs::MatchInstalled::All" : "1.000000",
-            "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" : "0.002001",
+            "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" : "0.003001",
             "Dist::Zilla::Plugin::ReadmeAnyFromPod" : "0.142470",
             "Dist::Zilla::Plugin::ReadmeFromPod" : "0.21",
             "Dist::Zilla::Plugin::RemovePhasedPrereqs" : "0.002",
@@ -154,7 +154,7 @@
             "Dist::Zilla::Plugin::PodSyntaxTests" : "5.020",
             "Dist::Zilla::Plugin::PodWeaver" : "4.006",
             "Dist::Zilla::Plugin::Prereqs" : "5.020",
-            "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" : "0.002001",
+            "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" : "0.003001",
             "Dist::Zilla::Plugin::ReadmeAnyFromPod" : "0.142470",
             "Dist::Zilla::Plugin::ReadmeFromPod" : "0.21",
             "Dist::Zilla::Plugin::RewriteVersion::Sanitized" : "0.001003",
@@ -175,7 +175,7 @@
             "Dist::Zilla::Util::ConfigDumper" : "0.003004",
             "Dist::Zilla::Util::CurrentCmd" : "0.002001",
             "Dist::Zilla::Util::EmulatePhase" : "1.001001",
-            "IO::Socket::SSL" : "1.997",
+            "IO::Socket::SSL" : "1.998",
             "LWP::Protocol::https" : "6.06",
             "Moose" : "2.1211",
             "Moose::Util::TypeConstraints" : "2.1211",
@@ -193,7 +193,7 @@
             "Test::Perl::Critic" : "1.02",
             "Test::Pod" : "1.48",
             "Test::Pod::Coverage" : "1.10",
-            "namespace::autoclean" : "0.19",
+            "namespace::autoclean" : "0.20",
             "perl" : "5.008",
             "strict" : "0",
             "utf8" : "0",
@@ -315,9 +315,9 @@
          "Dist::Zilla::Plugin::PodWeaver" : "4.006",
          "Dist::Zilla::Plugin::Prereqs" : "5.020",
          "Dist::Zilla::Plugin::Prereqs::AuthorDeps" : "0.003",
-         "Dist::Zilla::Plugin::Prereqs::MatchInstalled" : "1.001001",
+         "Dist::Zilla::Plugin::Prereqs::MatchInstalled" : "1.001002",
          "Dist::Zilla::Plugin::Prereqs::MatchInstalled::All" : "1.000000",
-         "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" : "0.002001",
+         "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" : "0.003001",
          "Dist::Zilla::Plugin::ReadmeAnyFromPod" : "0.142470",
          "Dist::Zilla::Plugin::ReadmeFromPod" : "0.21",
          "Dist::Zilla::Plugin::RemovePhasedPrereqs" : "0.002",
@@ -345,7 +345,7 @@
          "File::pushd" : "1.009",
          "FindBin" : "1.51",
          "Git::Wrapper" : "0.037",
-         "IO::Socket::SSL" : "1.997",
+         "IO::Socket::SSL" : "1.998",
          "JSON::MaybeXS" : "1.002002",
          "LWP::Protocol::https" : "6.06",
          "Module::Build" : "0.4210",
@@ -388,7 +388,7 @@
          "Test::Pod" : "1.48",
          "Test::Pod::Coverage" : "1.10",
          "lib" : "0.63",
-         "namespace::autoclean" : "0.19",
+         "namespace::autoclean" : "0.20",
          "strict" : "1.08",
          "utf8" : "1.14",
          "version" : "0.9909",
@@ -982,11 +982,13 @@
                   "modules" : [
                      "ExtUtils::MakeMaker",
                      "Test::More"
-                  ]
+                  ],
+                  "source_relation" : "requires",
+                  "target_relation" : "recommends"
                }
             },
             "name" : "@Author::KENTNL/Prereqs::Recommend::MatchInstalled",
-            "version" : "0.002001"
+            "version" : "0.003001"
          },
          {
             "class" : "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled",
@@ -1001,11 +1003,13 @@
                   "modules" : [
                      "Dist::Zilla::PluginBundle::Author::KENTNL",
                      "Dist::Zilla::App::Command::bakeini"
-                  ]
+                  ],
+                  "source_relation" : "requires",
+                  "target_relation" : "recommends"
                }
             },
             "name" : "@Author::KENTNL/always_latest_develop_bundle",
-            "version" : "0.002001"
+            "version" : "0.003001"
          },
          {
             "class" : "Dist::Zilla::Plugin::Prereqs",
