@@ -110,7 +110,7 @@ requires:
   Dist::Zilla::Plugin::PodSyntaxTests: '5.020'
   Dist::Zilla::Plugin::PodWeaver: '4.006'
   Dist::Zilla::Plugin::Prereqs: '5.020'
-  Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.002001'
+  Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.003001'
   Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.142470'
   Dist::Zilla::Plugin::ReadmeFromPod: '0.21'
   Dist::Zilla::Plugin::RewriteVersion::Sanitized: '0.001003'
@@ -131,7 +131,7 @@ requires:
   Dist::Zilla::Util::ConfigDumper: '0.003004'
   Dist::Zilla::Util::CurrentCmd: '0.002001'
   Dist::Zilla::Util::EmulatePhase: '1.001001'
-  IO::Socket::SSL: '1.997'
+  IO::Socket::SSL: '1.998'
   LWP::Protocol::https: '6.06'
   Moose: '2.1211'
   Moose::Util::TypeConstraints: '2.1211'
@@ -149,7 +149,7 @@ requires:
   Test::Perl::Critic: '1.02'
   Test::Pod: '1.48'
   Test::Pod::Coverage: '1.10'
-  namespace::autoclean: '0.19'
+  namespace::autoclean: '0.20'
   perl: '5.008'
   strict: '0'
   utf8: '0'
@@ -214,9 +214,9 @@ x_BuiltWith:
     Dist::Zilla::Plugin::PodWeaver: '4.006'
     Dist::Zilla::Plugin::Prereqs: '5.020'
     Dist::Zilla::Plugin::Prereqs::AuthorDeps: '0.003'
-    Dist::Zilla::Plugin::Prereqs::MatchInstalled: '1.001001'
+    Dist::Zilla::Plugin::Prereqs::MatchInstalled: '1.001002'
     Dist::Zilla::Plugin::Prereqs::MatchInstalled::All: '1.000000'
-    Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.002001'
+    Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.003001'
     Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.142470'
     Dist::Zilla::Plugin::ReadmeFromPod: '0.21'
     Dist::Zilla::Plugin::RemovePhasedPrereqs: '0.002'
@@ -244,7 +244,7 @@ x_BuiltWith:
     File::pushd: '1.009'
     FindBin: '1.51'
     Git::Wrapper: '0.037'
-    IO::Socket::SSL: '1.997'
+    IO::Socket::SSL: '1.998'
     JSON::MaybeXS: '1.002002'
     LWP::Protocol::https: '6.06'
     Module::Build: '0.4210'
@@ -287,7 +287,7 @@ x_BuiltWith:
     Test::Pod: '1.48'
     Test::Pod::Coverage: '1.10'
     lib: '0.63'
-    namespace::autoclean: '0.19'
+    namespace::autoclean: '0.20'
     strict: '1.08'
     utf8: '1.14'
     version: '0.9909'
@@ -747,8 +747,10 @@ x_Dist_Zilla:
           modules:
             - ExtUtils::MakeMaker
             - Test::More
+          source_relation: requires
+          target_relation: recommends
       name: '@Author::KENTNL/Prereqs::Recommend::MatchInstalled'
-      version: '0.002001'
+      version: '0.003001'
     -
       class: Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled
       config:
@@ -760,8 +762,10 @@ x_Dist_Zilla:
           modules:
             - Dist::Zilla::PluginBundle::Author::KENTNL
             - Dist::Zilla::App::Command::bakeini
+          source_relation: requires
+          target_relation: recommends
       name: '@Author::KENTNL/always_latest_develop_bundle'
-      version: '0.002001'
+      version: '0.003001'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
