@@ -60,7 +60,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::PodSyntaxTests" => "5.020",
     "Dist::Zilla::Plugin::PodWeaver" => "4.006",
     "Dist::Zilla::Plugin::Prereqs" => "5.020",
-    "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" => "0.002001",
+    "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" => "0.003001",
     "Dist::Zilla::Plugin::ReadmeAnyFromPod" => "0.142470",
     "Dist::Zilla::Plugin::ReadmeFromPod" => "0.21",
     "Dist::Zilla::Plugin::RewriteVersion::Sanitized" => "0.001003",
@@ -81,7 +81,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Util::ConfigDumper" => "0.003004",
     "Dist::Zilla::Util::CurrentCmd" => "0.002001",
     "Dist::Zilla::Util::EmulatePhase" => "1.001001",
-    "IO::Socket::SSL" => "1.997",
+    "IO::Socket::SSL" => "1.998",
     "LWP::Protocol::https" => "6.06",
     "Moose" => "2.1211",
     "Moose::Util::TypeConstraints" => "2.1211",
@@ -99,7 +99,7 @@ my %WriteMakefileArgs = (
     "Test::Perl::Critic" => "1.02",
     "Test::Pod" => "1.48",
     "Test::Pod::Coverage" => "1.10",
-    "namespace::autoclean" => "0.19",
+    "namespace::autoclean" => "0.20",
     "strict" => 0,
     "utf8" => 0,
     "version" => "0.9909",
@@ -173,7 +173,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::PodWeaver" => "4.006",
   "Dist::Zilla::Plugin::Prereqs" => "5.020",
   "Dist::Zilla::Plugin::Prereqs::MatchInstalled" => 0,
-  "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" => "0.002001",
+  "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" => "0.003001",
   "Dist::Zilla::Plugin::ReadmeAnyFromPod" => "0.142470",
   "Dist::Zilla::Plugin::ReadmeFromPod" => "0.21",
   "Dist::Zilla::Plugin::RewriteVersion::Sanitized" => "0.001003",
@@ -199,7 +199,7 @@ my %FallbackPrereqs = (
   "File::pushd" => "1.009",
   "FindBin" => 0,
   "Git::Wrapper" => "0.037",
-  "IO::Socket::SSL" => "1.997",
+  "IO::Socket::SSL" => "1.998",
   "LWP::Protocol::https" => "6.06",
   "Module::Build" => 0,
   "Module::Metadata" => "1.000024",
@@ -227,7 +227,7 @@ my %FallbackPrereqs = (
   "Test::Pod" => "1.48",
   "Test::Pod::Coverage" => "1.10",
   "lib" => 0,
-  "namespace::autoclean" => "0.19",
+  "namespace::autoclean" => "0.20",
   "strict" => 0,
   "utf8" => 0,
   "version" => "0.9909",
