@@ -46,7 +46,7 @@ do { my $x = {
                                       'Dist::Zilla::Plugin::Prereqs' => '5.020',
                                       'Dist::Zilla::Plugin::Prereqs::AuthorDeps' => '0.003',
                                       'Dist::Zilla::Plugin::Prereqs::MatchInstalled::All' => '1.000000',
-                                      'Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled' => '0.002001',
+                                      'Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled' => '0.003001',
                                       'Dist::Zilla::Plugin::ReadmeAnyFromPod' => '0.142470',
                                       'Dist::Zilla::Plugin::ReadmeFromPod' => '0.21',
                                       'Dist::Zilla::Plugin::RemovePhasedPrereqs' => '0.002',
@@ -139,7 +139,7 @@ do { my $x = {
                                       'Dist::Zilla::Plugin::PodSyntaxTests' => '5.020',
                                       'Dist::Zilla::Plugin::PodWeaver' => '4.006',
                                       'Dist::Zilla::Plugin::Prereqs' => '5.020',
-                                      'Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled' => '0.002001',
+                                      'Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled' => '0.003001',
                                       'Dist::Zilla::Plugin::ReadmeAnyFromPod' => '0.142470',
                                       'Dist::Zilla::Plugin::ReadmeFromPod' => '0.21',
                                       'Dist::Zilla::Plugin::RewriteVersion::Sanitized' => '0.001003',
@@ -160,7 +160,7 @@ do { my $x = {
                                       'Dist::Zilla::Util::ConfigDumper' => '0.003004',
                                       'Dist::Zilla::Util::CurrentCmd' => '0.002001',
                                       'Dist::Zilla::Util::EmulatePhase' => '1.001001',
-                                      'IO::Socket::SSL' => '1.997',
+                                      'IO::Socket::SSL' => '1.998',
                                       'LWP::Protocol::https' => '6.06',
                                       'Moose' => '2.1211',
                                       'Moose::Util::TypeConstraints' => '2.1211',
@@ -178,7 +178,7 @@ do { my $x = {
                                       'Test::Perl::Critic' => '1.02',
                                       'Test::Pod' => '1.48',
                                       'Test::Pod::Coverage' => '1.10',
-                                      'namespace::autoclean' => '0.19',
+                                      'namespace::autoclean' => '0.20',
                                       'perl' => '5.008',
                                       'strict' => '0',
                                       'utf8' => '0',
