@@ -1,6 +1,8 @@
 ﻿Revision history for Dist-Zilla-PluginBundle-Author-KENTNL
 
 2.020002 2014-09-06T07:27:26Z
+ [Utils]
+ - dep_changes: Enable LMDB Backend as an option.
 
 2.020001 2014-09-06T03:22:12Z
  [Bugfix]
